# xiron

./: .gitignore  404.html  Cargo.toml  LICENSE  README.md  build.rs  config.yaml  index.html  mkdocs.yml  search.html  sitemap.xml  test_zmq.py
.github/workflows/: publish.yml  rust.yml
advanced/multi_robot_usage/: index.html
advanced/robot_model/: index.html
advanced/rust_interface/: index.html
bindings/xiron_py/: README.md  setup.py
contributions/: index.html
docs/: contributions.md  index.md  installation.md
docs/user_guide/: configuration.md  gui_usage.md  python_interface.md
examples/: config.yaml  keyboard_input.rs  numerical_simulation.rs  raycast_example.rs
examples/async_operations/: main.rs
examples/comms/: comms_sub.rs
examples/grpc_client/: config.yaml  main.rs
examples/keyboard_input/: congif.yaml  main.rs  new_config.yaml
examples/path_tracking/: config.yaml  main.rs  new_config.rs
examples/websocket_client/: main.rs
examples/zmq_comms/: comms_pub.rs
installation/: index.html
proto/: interface.proto
search/: search_index.json
src/: camera_handler.rs  comms.rs  gui_interface.rs  handler.rs  lib.rs  main.rs  parameter.rs  parser.rs  prelude.rs  utils.rs  ws_comms.rs
src/algorithms/: controller.rs  graph_based_planner.rs  mod.rs  sampler.rs
src/behaviour/: collide.rs  mod.rs  sense.rs  traits.rs
src/object/: dynamic_obj.rs  handler.rs  mod.rs  robot.rs  sensors.rs  static_obj.rs  wall.rs
src/protos/: laser_scan.proto  pose.proto  reset.proto  twist.proto
tests/: test_jsons.rs
user_guide/configuration/: index.html
(+10 files in other folders)
