[package]
name = "xiron"
version = "0.1.0"
edition = "2021"

[dependencies]
parry2d = "0.12.0"
macroquad = "0.3.25"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0.94"
zmq = "0.10.0"
egui-macroquad = "0.15.0"
rfd = "0.11.4"
futures = "0.3.28"

[[bin]]
name = "xiron_simulator"
path = "src/bin/xiron_simulator.rs"
