[package]
name = "xiron"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "A lightweight 2D robot simulator written in Rust."

[dependencies]
parry2d = "0.12.0"
macroquad = "0.3.25"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0.94"
zmq = "0.10.0"
egui-macroquad = "0.15.0"
rfd = "0.11.4"
futures = "0.3.28"
rand = "0.8.5"
tungstenite = "0.24.0"
url = "2.5.2"

[[bin]]
name = "xiron_simulator"
path = "src/bin/xiron_simulator.rs"
